Fix container on view-toki page so buttons align with name.

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -20,6 +20,8 @@ h1 {
 
 .modifiers {
     text-align: right;
+    padding: 20px 0px 5px 0px;
+
 }
 
 .title-toki {
